--- a/templates/macros/page.html
+++ b/templates/macros/page.html
@@ -86,7 +86,8 @@
 {% macro project_info(page) %}
 <div class="article-info">
     {% if page.date %}
-    <div class="article-date">{{ page.date | date(format=trans(key="date_format", lang=lang)) }}</div>
+    {% set reading_time = "◦ " ~ page.reading_time ~ " " ~ trans(key="minute", lang=lang) %}
+    <div class="article-date">{{ page.date | date(format=trans(key="date_format", lang=lang)) }} {{ reading_time }}</div>
     {% endif %}
     <div class="article-taxonomies">
         {% if page.taxonomies.categories %}
